<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_tip_dialog_bg"
    android:gravity="center"
    android:minWidth="350dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_tip_dialog_title_bg"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:paddingVertical="10dp"
        android:text="@string/tip"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:padding="10dp"
            android:text="@string/content"
            android:textColor="@color/grey_700"
            android:textSize="12sp"
            android:textStyle="bold" />
    </ScrollView>

    <TextView
        android:id="@+id/tv_api"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:paddingHorizontal="10dp"
        android:text="@string/api"
        android:textColor="@color/grey_700"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_project"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:paddingHorizontal="10dp"
        android:text="@string/project"
        android:textColor="@color/grey_700"
        android:textSize="12sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cb_never_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btn_ensure"
            android:layout_margin="2dp"
            android:layout_toStartOf="@id/btn_ensure"
            android:buttonTint="@color/main_color"
            android:text="@string/never_tip"
            tools:ignore="RelativeOverlap" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ensure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/ensure"
            android:textColor="@color/main_color"
            app:backgroundTint="@color/purple_100" />
    </RelativeLayout>
</LinearLayout>