<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/shape_item_love_bg"
    android:paddingHorizontal="15dp"
    android:paddingVertical="2dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/song_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_baseline_play_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_play_count"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tv_play_count"
        style="@style/tv_grey"
        android:layout_marginEnd="20dp"
        android:text="@string/num"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_update_time"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_update_time"
        style="@style/tv_grey"
        android:layout_marginEnd="10dp"
        android:text="@string/_2022_11_09"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_duration"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_duration"
        style="@style/tv_grey"
        android:text="@string/_02_50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />
</androidx.constraintlayout.widget.ConstraintLayout>