<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_bg"
    tools:context=".ui.LoginFragment">

    <TextView
        android:id="@+id/tv_card_title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_login_type"
        android:elevation="2dp"
        android:gravity="center"
        android:letterSpacing="0.2"
        android:padding="10dp"
        android:text="@string/login_phone"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ll_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_card"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_login_card"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/number"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verification_code"
                    android:inputType="textPassword"
                    android:lines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_get_verification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_verification" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/visitor_login"
                android:textColor="@color/grey_700"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
                app:drawableTint="@color/grey_700" />

            <TextView
                android:id="@+id/tv_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/login_phone"
                android:textColor="@color/grey_700"
                app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:drawableTint="@color/grey_700"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>