<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D2000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_cover"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginTop="50dp" />

        <TextView
            android:id="@+id/tv_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/white___"
            android:textSize="13sp" />

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#43FFFFFF" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/btn_love"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_press"
                android:paddingVertical="10dp"
                android:paddingStart="60dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_favorite_24"
                    app:tint="@color/white___" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/collection"
                    android:textColor="@color/white___"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_press"
                android:paddingVertical="10dp"
                android:paddingStart="60dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_circle_down_24"
                    app:tint="@color/white___" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/download"
                    android:textColor="@color/white___"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_press"
                android:paddingVertical="10dp"
                android:paddingStart="60dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_comment_24"
                    app:tint="@color/white___" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/comment"
                    android:textColor="@color/white___"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_singer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_press"
                android:paddingVertical="10dp"
                android:paddingStart="60dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_person_24"
                    app:tint="@color/white___" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/check_singer"
                    android:textColor="@color/white___"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dialog_press"
                android:paddingVertical="10dp"
                android:paddingStart="60dp"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_album_24"
                    app:tint="@color/white___" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:text="@string/check_album"
                    android:textColor="@color/white___"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>